[gd_scene load_steps=10 format=2]

[ext_resource path="res://background/1501502186226804.png" type="Texture" id=1]
[ext_resource path="res://background/panel3.png" type="Texture" id=2]
[ext_resource path="res://characters/character.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemy/Ennemy.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/cardDeck/CardSpawn.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/grave/CardUsed.tscn" type="PackedScene" id=6]
[ext_resource path="res://combatzone/Combat interface.gd" type="Script" id=7]
[ext_resource path="res://characters/character_panelData/char_lifebar.tscn" type="PackedScene" id=8]
[ext_resource path="res://characters/character_panelData/char_forcebar.tscn" type="PackedScene" id=9]

[node name="Combat interface" type="Node2D"]
script = ExtResource( 7 )
__meta__ = {
"_editor_description_": "comabt_interface"
}

[node name="background" type="Sprite" parent="."]
position = Vector2( 600, 290 )
scale = Vector2( 1.16, 1.24212 )
z_index = -1
texture = ExtResource( 1 )

[node name="panel" type="Sprite" parent="."]
self_modulate = Color( 0.172549, 0.172549, 0.172549, 1 )
position = Vector2( 613.761, 647.523 )
scale = Vector2( 0.756963, 0.505985 )
texture = ExtResource( 2 )

[node name="char_lifebar" parent="panel" instance=ExtResource( 8 )]

[node name="char_forcebar" parent="panel" instance=ExtResource( 9 )]
position = Vector2( 0, 60.6594 )

[node name="CardSpawn" parent="." instance=ExtResource( 5 )]
position = Vector2( 132, 630 )

[node name="CardUsed" parent="." instance=ExtResource( 6 )]
position = Vector2( 1090, 646 )

[node name="position1" type="Position2D" parent="."]
position = Vector2( 613.761, 498 )
scale = Vector2( 0.525424, 0.525424 )

[node name="character" parent="." instance=ExtResource( 3 )]
position = Vector2( 191, 354 )

[node name="Ennemy" parent="." instance=ExtResource( 4 )]
position = Vector2( 1025, 357 )

[node name="cards" type="Node2D" parent="."]
[connection signal="pressed" from="CardSpawn/TextureButton" to="." method="_on_TextureButton_pressed"]

[editable path="CardSpawn"]

[editable path="CardUsed"]
